--- a/bibs.bib
+++ b/bibs.bib
@@ -2279,8 +2279,8 @@ series = {PLDI '07}
 
 
 @misc{go-cmd-trace,
-title={Command Trace},
 author = {Golang},
+title={Command Trace},
 url={https://golang.org/cmd/trace/},
 }
 
@@ -2600,4 +2600,16 @@ url={https://sc20.supercomputing.org/proceedings/sotp/sotp_pages/sotp126.html},
       eprint={2105.11064},
       archivePrefix={arXiv},
       primaryClass={cs.DC}
+}
+
+@misc{moby-28462-commit,
+url={https://github.com/moby/moby/issues/28405},
+}
+
+@IEEEtranBSTCTL{IEEEexample:BSTcontrol,
+  CTLdash_repeated_names = "no"
+}
+
+@misc{goexit-line-of-code,
+url={https://golang.org/src/runtime/proc.go?s=98638:98652#L3409},
 }
