--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -53,18 +53,18 @@
 \title{\goat: Automated Dynamic Concurrency Analysis and Testing for Go}
 
 
-\author{\IEEEauthorblockN{Saeed Taheri}
-\IEEEauthorblockA{\textit{School of Computing} \\
-\textit{University of Utah}\\
-Salt Lake City, U.S.A. \\
-staheri@cs.utah.edu}
-\and
-\IEEEauthorblockN{Ganesh Gopalakrishnan}
-\IEEEauthorblockA{\textit{School of Computing} \\
-\textit{University of Utah}\\
-Salt Lake City, U.S.A. \\
-ganesh@cs.utah.edu}
-}
+%\author{\IEEEauthorblockN{Saeed Taheri}
+%\IEEEauthorblockA{\textit{School of Computing} \\
+%\textit{University of Utah}\\
+%Salt Lake City, U.S.A. \\
+%staheri@cs.utah.edu}
+%\and
+%\IEEEauthorblockN{Ganesh Gopalakrishnan}
+%\IEEEauthorblockA{\textit{School of Computing} \\
+%\textit{University of Utah}\\
+%Salt Lake City, U.S.A. \\
+%ganesh@cs.utah.edu}
+%}
 
 \maketitle
 
@@ -75,6 +75,8 @@ ganesh@cs.utah.edu}
 \begin{IEEEkeywords}
 golang, concurrency, testing coverage analysis
 \end{IEEEkeywords}
+
+\bstctlcite{IEEEexample:BSTcontrol}
 
 %\section{GIntroduction}
 %\label{sec:Gintro}
@@ -93,19 +95,19 @@ golang, concurrency, testing coverage analysis
 \label{sec:design}
 \input{design.tex}
 
+\section{Evaluation}
+\label{sec:evaluation}
+\input{evaluation.tex}
 
-\section{GOAT: Coverage}
-\label{sec:coverage}
-\input{coverage.tex}
+%\section{GOAT: Coverage}
+%\label{sec:coverage}
+%\input{coverage.tex}
 
 
-%\section{Related Work}
-%\label{sec:related}
-%\input{relatedwork.tex}
+\section{Related Work}
+\label{sec:related}
+\input{relatedwork.tex}
 
-\section{Conclusion}
-\label{sec:conclusion}
-\input{conclusion.tex}
 
 \section{Summary \& Future Work}
 \label{sec:summary}
